      explains how to define elemental limits specified via `minElements` and 
      `maxElements`
    * `maxElements`does respect now an upper limit of zero (basically another way
      to exclude elements, which could be achieved before only by not defining the
      element in the first place, which caused trouble for CHNOPS elements which 
      are always expected by disop.cpp)

2024-11-05 Jan Lisec <jan.lisec@bam.de>

    * Rdisop-1.67.2
    * fix for issue #21; `decomposeIsotopes` modified the object provided as
      parameter `intensities`

2024-10-18 Jan Lisec <jan.lisec@bam.de>

    * Rdisop-1.67.1
    * !changed `getIsotope` function to return a list of matrices to be 
      consistent with the other getter functions
    * new exported function `getMonoisotopic()` which will return the mono-isotopic mass
      for a molecule object (also when a list of molecules as for decomposeMass)
      or alternatively for a vector of chemical formulas
    * modified documentation to clarify the difference of exactmass and mono-
      isotopic mass
    * `testthat` tests for `getMonoisotopic` were set up 
    * `getMolecule` is now testing the provided formula parameter to avoid crashes
      on the C++ level (addressing issue #3)
    * new internal function to count chemical elements (imported/copied from the
      CorMID package) to be utilized in `getMonoisotopic` and `getMolecule`
    * two data sets included in package and appropriately documented
    * `isotopes` (a data.frame version of the PSE info) 
    * `mono_masses` (a named vector containing only the most abundant isotope per 
      element)
    
2024-10-10 Jan Lisec <jan.lisec@bam.de>

    * Rdisop-1.65.3
    * getMolecule now respects the charge parameter z
    * exact masses will be corrected by z times the electron mass
    * isotope masses will be additionally devided in case of abs(z)>=2
    * a `testthat` function for getMolecule was set up 
    * the documentation for getMolecule was updated